<resources>
    <string name="app_name">PA2</string>
    <string name="option1">option</string>
    <string name="titleMain">ÁREAS Y PERIMETROS</string>
    <string name="subTitleActivityMain">calcular áreas y perímetros de figuras geométricas</string>
    <string name="AREAS">ÁREAS</string>
    <string name="PERIMETERS">PERÍMETROS</string>
    <string name="todo">TODO</string>
    <string name="square">Cuadrado</string>
    <string name="side">Lado del cuadrado</string>
    <string name="calculate">calcular</string>
    <string name="ecuaP">P=4l</string>
    <string name="ecuaA">A=l*l</string>
    <string name="value_a" >Ingrese Apotema</string>
    <string name="value_l">Ingrese lado</string>
    <string name="button">Calcular</string>
    <string name="result_t" />
    <string name="text_title">Pentagono</string>
    <string name="Circle">Círculo</string>
    <string name="perimeter_circle">P = 2 * pi * R</string>
    <string name="area_circle">A = pi * R^2</string>
    <string name="radio">Radio</string>
    <string name="circle_image">circle_image</string>

    <string name="rectangle">Rectángulo</string>
    <string name="width">Ancho</string>
    <string name="length">Longitud</string>
    <string name="infoRectangle">"Perímetro: %s     Área: %s\n"</string>
    <string name="emptyInput">Ingresa los datos.</string>
    <string name="rectangle_image">Imagen Rectangulo</string>
    <string name="perimeter_rectangle">P= 2 * A + 2 * L</string>
    <string name="area_rectangle">A = A * L</string>

    <string name="triangle">Triángulo Equilatero</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="infoTriangle">"Perímetro: %s     Área: %s\n"</string>
    <string name="triangle_image">Imagen Triangulo</string>
    <string name="perimeter_triangle">P= B * 3</string>
    <string name="area_triangle">A = B * H / 2</string>


    <string-array name="figurs">
        <item>Triángulo</item>
        <item>Cuadrado</item>
        <item>Rectángulo</item>
        <item>Pentágono</item>
        <item>Hexágono</item>
        <item>Círculo</item>
    </string-array>
    <string-array name="unids">
        <item>m</item>
        <item>Cm</item>
        <item>mm</item>
    </string-array>

</resources>