<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        style="@style/textViewTitle.H3"
        android:layout_width="409dp"
        android:layout_height="242dp"
        android:layout_marginTop="252dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_activity_main_text_view"
        app:srcCompat="@drawable/areas" />

    <TextView
        android:id="@+id/title_activity_main_text_view"
        style="@style/textViewTitle.H1"
        android:layout_width="294dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/titleMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle_activity_main_text_view"
        style="@style/textViewTitle.H2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/subTitleActivityMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_activity_main_text_view" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="331dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:text="@string/calculate"
        android:textColor="#455A64"
        app:layout_constraintEnd_toEndOf="@+id/figurs_spinner"
        app:layout_constraintStart_toStartOf="@+id/figurs_spinner"
        app:layout_constraintTop_toBottomOf="@+id/figurs_spinner" />

    <Spinner
        android:id="@+id/figurs_spinner"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sheet_bottom"
        android:backgroundTint="@color/primary_light"
        android:backgroundTintMode="src_in"
        android:entries="@array/figurs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_activity_main_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>